<resources>
    <string name="app_name">My Journal</string>
    <string name="hello_text">Hello</string>
    <string name="change_localization">Change Language</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1051059842965814</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1051059842965814</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="addJournalEntryTitle">Title</string>
    <string name="addJournalEntryText">Text</string>
    <string name="addJournalEntryDate">Date</string>
    <string name="addJournalEntrySelectDate">Select Date</string>
    <string name="addJournalEntryLocation">Location</string>
    <string name="addJournalEntryUploadImage">Upload Image</string>
    <string name="addJournalEntryCaptureImage">Capture Image</string>
    <string name="saveEntry">Save</string>
    <string name="closeEntry">Close</string>
    <string name="you_are_not_signed_in">You are not signed in</string>
    <string name="open_view_journals">View Entries</string>
    <string name="open_journal_entry">Open</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="signed_in_as">You are signed in as %s</string>
    <string name="error_sign_in">Error while signing in</string>
    <string name="no_entries_found">No entries found</string>
    <string name="succesfully_logged_in">You have successfully logged in</string>
    <string name="succesfully_logged_out">You have successfully logged out</string>
    <string name="language_changed_success">Language changed</string>
    <string name="user_not_logged_in">You must log in to create new entries</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="delete">Delete</string>

    <string name="succesfully_deleted_entry">Successfully deleted entry</string>
    <string name="failed_deleting_entry">Oops! Something went wrong</string>

    <string name="succesfully_created_entry">Successfully created entry</string>
    <string name="failed_creating_entry">Oops! Something went wrong</string>

    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_message">Are you sure you want to delete all entries?</string>

    <string name="delete_entries_success">Successfully deleted all entries</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_message">Are you sure you want to delete this entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="user_not_authenticated_message">You must be logged in to view entries.</string>

    <string name="guest">guest</string>

</resources>